# opencv

./: CMakeLists.txt  README.md
code/c++/: main.cpp  part1.cpp  part1.h
code/python/: TrackBar.py  main.py  mouse.py  part1.py  utils.py
code/python/car_Identify/: main.py
code/python/color/: ch.py  color.py
code/python/contour/: circumscribed_rectangle.py  findContours.py  polygon.py
code/python/img_operation/: bit_operation.py  canny.py  filter.py  fusion.py  highPassFilter.py  operation.py  perspective.py  transform.py
code/python/morphology/: corrosion.py  morphology.py  open_operation.py  swell.py
code/python/plot/: draws.py  ellipse.py  line.py  polylines.py  text.py
docs/: part2.md  part3.md  part4.md  part6.md  part7.md  环境搭建.md
